Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118895

No signals are emmited after error Failed to create pairing "org.bluez.Error.AuthenticationCanceled"

XMLWordPrintable

    • Linux/X11
    • 9815fa235 (dev), be8154fc5 (6.6), 47ab4aa31 (tqtc/lts-6.5)

      We have some issues with Ruptela HCV5 bluetooth-enabled device, but on top of that we can't easily handle errors as it seems that Qt ignores org.bluez.Error.AuthenticationCanceled.

      Here's some relevant application output with bluetooth logging categories enabled:

       

      qt.bluetooth.bluez: Bluez 5 detected.
      qt.bluetooth.bluez: Registering profile under "/qt/profile/MyApp198073/0" "e8e10f95-1a70-4b27-9ccf-02010264e9c8"
      qt.bluetooth.bluez: Detecting bluetoothd version
      qt.bluetooth.bluez: Using /proc/<pid>/exe
      qt.bluetooth.bluez: Using /proc/<pid>/cmdline
      qt.bluetooth.bluez: Detected bluetoothd version 5.55
      qt.bluetooth.bluez: Bluetoothd: "5.55"
      qt.bluetooth: Using BlueZ LE DBus API
      qt.bluetooth.bluez: Creating QtBluezDiscoveryManager
      qt.bluetooth.bluez: Initiating discovery for pairing on "D4:B8:66:A7:C7:9E"
      qt.bluetooth.bluez: Sending pairing request to "D4:B8:66:A7:C7:9E"
      qt.bluetooth.bluez: Failed to create pairing  "org.bluez.Error.AuthenticationCanceled"
      

      I've got error and pairingFinished signals connected:

          connect(m_localDevice, &QBluetoothLocalDevice::pairingFinished, this, &RuptelaBTDevice::onPairingFinished);
          connect(m_localDevice, &QBluetoothLocalDevice::error, this, &RuptelaBTDevice::onLocalDeviceError);

      But none o these are emitted in this case for some reason.

      Some other user also discovered this issue in Qt forums: https://forum.qt.io/topic/145293/bluetooth-pairing-fails

       

        For Gerrit Dashboard: QTBUG-118895
        # Subject Branch Project Status CR V

            ivan.solovev Ivan Solovev
            vdargis_at_uab_styritrade Vincas Dargis
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes